--- a/reconstruction.rmd
+++ b/reconstruction.rmd
@@ -30,7 +30,7 @@ opts_chunk$set(cache=TRUE)
 
 # A.  Introduction
 
-Big data practice often converts an existing state of affairs by adding a model or predictive elements based on the extraction and analysis of data. This paper recounts the conversion of  an online grocery ordering system  from an older demographically-based recommendation system to a 'personal relevance' model. The main argument of the paper concerns how  personalization occurs in big data 'conversion events.' The term 'conversion event' has a dual sense. In recommender system design and web ecommerce, it refers to those occasions when a customer, user or site visitor clicks a specific hyperlink or purchases something that has been suggested to them. I also use it to refer to the common before-after narrative forms that proponents, developers and advocates of recommender systems adopt in describing, promoting, explaining or otherwise talking about big data, analytics or predictive modelling practices. The operational and narrative dimension of conversion events lie at the core of this paper. It may be that the two senses of the term -- the technical and the imaginary -- cannot be kept apart.
+Big data practice often converts an existing state of affairs by adding a model or predictive elements based on the extraction and analysis of data. This paper recounts the conversion of  an online grocery ordering system  from an older demographically-based recommendation system to a 'personal relevance' model. The main argument of the paper concerns how  personalization occurs in big data 'conversion events.' The term 'conversion event' has a dual sense. In recommender system design and web e-commerce, it refers to those occasions when a customer, user or site visitor clicks a specific hyperlink or purchases items displayed to them. I also use it to refer to the common before-after narrative forms that proponents, developers and advocates of recommender systems adopt in describing, promoting, explaining or otherwise talking about big data, analytics or predictive modelling practices. The operational and narrative dimension of conversion events lie at the core of this paper. It may be that the two senses of the term -- the technical and the figurative -- cannot be kept apart.
 
 In recent research and opinion on recommendations, personalization has been seen as the goal of predictive modelling. A glance at the conference proceedings of the annual ACM RecSys conference will show many papers with 'personalization' in the title [@ACM_2017].  Big data discourse in its promissory mode attributes potency to personalization: 'most important, using big data we hope to identify specific individuals rather than groups' [@Mayer-Schonberger_2013], even if personalization has a much longer history in commerce and e-commerce in particular [@Goy_2007;@Sarwar_2000]. Conversely, current debates about the problems of big data emphasize the need to protect people from personalization.  Joseph Turow and co-authors conclude in their critical account of the transformation of retail space by business analytics: 'through it all, knowingly and not, and away from the spotlights of fierce social debate, retailers are encouraging daily routines that accept data-driven personalization as a centrifugal public' [@Turow_2015, 476]. Analysis of internet filter bubbles and the growth of predictive platforms in industry and government  [@Pariser_2011; @ONeil_2016a] also centre on personalization.
 
@@ -52,27 +52,27 @@ At one of the many industry-meets-academia events occurring in data science-orie
 
 [^11.1]: More than 100  Data Science Institutes have been set up in North America, Europe and UK since around 2012. The traffic between higher education and data analytics in industry is intense and flows in several forms: people funding, research findings, software and technical devices (code) and training.
 
-Against the background of the sheer number of commodities and their distribution of prices, Patel's presentation presents two opportunities. First, by recounting, contextualising and commenting on the main steps in making the 'Have you forgotten?' list, we might follow some of the predictive sense-making done by data scientists and customer analytics teams working with transactional data in a typical commercial setting. Patel mentioned many of these steps only fleetingly in the presentation, for they are largely taken for granted as part of predictive analytic practice. Second, Patel focused on the renovation and updating of long-standing data-mining practice via a much more explicitly 'big data' and 'machine learning'-oriented implementation. Her presentation concerns a typical big data conversion event  in which a long-standing recommender system was replaced by a 'big data'-style system delivering 'personally relevant' recommendations.   What stands out from the presentation is not any state-of-the-art innovation, but the ongoing life of the recommender system: the new predictive model is part of a long-standing and ongoing transformation of grocery shopping. From a sociological standpoint, the interest lies less in specific technical innovations and more in how the various facets of the recommender systems she describes relate to the role of prediction and probabilities in social order more generally.
+Against the background of the sheer number of commodities and their distribution of prices, Patel's presentation presents two opportunities. First, by recounting, contextualising and commenting on the main steps in making the 'Have you forgotten?' list, we might follow some of the predictive sense-making done by data scientists and customer analytics teams working with transactional data in a typical commercial setting. Patel mentioned many of these steps only fleetingly in the presentation, for they are largely taken for granted as part of predictive analytic practice. Second, Patel focused on the renovation and updating of long-standing data-mining practice via a much more explicitly 'big data' and 'machine learning'-oriented implementation. Her presentation concerns a typical big data conversion event  in which a long-standing recommender system was replaced by a 'big data'-style system delivering 'personally relevant' recommendations.   What stands out from the presentation is not any state-of-the-art innovation, but the ongoing life of the recommender system: the new predictive model is part of a long-standing and ongoing transformation of grocery shopping. Her presentation is the basis for this discussion: it shapes the choice of technical literature, code and data samples, as well as the consideration of underlying philosophical issues.  From a sociological standpoint, the interest lies less in specific technical innovations and more in how the various facets of the recommender systems she describes relate to the role of prediction and probabilities in social order more generally. 
 
 # C. Shopping list orderings
 
 Online grocery shopping at [Tesco](https://www.tesco.com/groceries/?icid=dchp_groceriesshopgroceries) includes recommendations for further grocery purchases under the title of 'Have you forgotten?'. When Tesco customers shop for groceries online, a list of five recommendations appear at the checkout stage. The recommendations are the product of a recommender system, an important category of operational device in big data (see for instance [@Hallinan_2014] for analysis of Netflix recommendation; [@Morris_2015]  or [@Seaver_2015] for an account of music recommendations).  The question 'Have you forgotten?' is followed by a list of some  grocery items that could have been or are usually on a shopping list. The title of the suggestions is a bit misleading. The recommender system, as we will see, is not concerned with forgetting, with the many slips and oversights associated to which shopping is prone,  but rather with substituting and adding items that customers had not selected perhaps because they had never thought of buying them in the first place. 
 
-Compared to music, film, travel, fashion and book purchases, grocery shopping is difficult to personalize. The anthropologist Daniel Miller has argued [@Miller_2012] that shopping negotiates discrepancies between normative and actual social order (for instance, between the ideals of health emblematised by organic products and commitments to thrift embodied in lower cost generic products). Miller suggests that household shopping practices attempt to resolve differences between how people think they should live and how they actually live: 'we have to watch how shopping helps resolve these discrepancies between the normative and the actual, but we also need some ideas of where the normative comes from in the first place' [@Miller_2012, 72]. More provocatively, Miller claims that 'shopping is largely a technology for the expression of love' (85). Whatever theory we have of how normative social order arises, Miller's argument  implies that shopping inhabits a mundane  but highly variable space between normative/idea and actual order. Importantly, and this will be a key consideration for the Tesco recommender systems, grocery shopping is not necessarily personal or individual. It  is saturated  by fluxing forms of social order concerning family and other forms of social grouping, and their associated relations (love, etc.). 
+Compared to music, film, travel, fashion and book purchases, online grocery shopping is difficult to personalize. The anthropologist Daniel Miller has argued [@Miller_2012] that all shopping negotiates discrepancies between normative and actual social order (for instance, between the ideals of health emblematised by organic products and commitments to thrift embodied in lower cost generic products). Miller suggests that household shopping practices attempt to resolve differences between how people think they should live and how they actually live: 'we have to watch how shopping helps resolve these discrepancies between the normative and the actual, but we also need some ideas of where the normative comes from in the first place' [@Miller_2012, 72]. More provocatively, Miller claims that 'shopping is largely a technology for the expression of love' (85). Whatever theory we have of how normative social order arises, Miller's argument  implies that shopping inhabits a mundane  but highly variable space between normative/idea and actual order. Importantly, and this will be a key consideration for the Tesco recommender systems, grocery shopping is not necessarily personal or individual. It  is saturated  by fluxing forms of social order concerning family and other forms of social grouping, and their associated relations (love, etc.). 
 
-Shopping lists provisionally stabilise the complex social ordering of grocery shopping.  They provide important clues as to how local social order is constituted, maintained, and repaired in shopping. As people shop, either by  trawling along aisles packed with thousands of products, or scrolling down screens or searching for particular brands amidst search results, lists filter or reduce the excessive abundance, claims on attention, dazzle and distraction of commodities to the practicalities of domestic economy. The shopping list, whether written on the back of an envelope, saved as a list in an online grocery shopping system, or remembered, lies at the intersection of logistical flows, infrastructural orderings, and  lively negotiations around actual and normative social orders.[^30.1]  Shopping lists  are intersectional ordering devices that encapsulate a universe of possible references, and a teeming multitude of propensities with an actual local order.[^1.456]
+In contrast to many other forms of online and offline shopping, shopping lists distinctively, albeit provisionally, stabilise the complex social ordering of grocery shopping.  Shopping lists provide important clues as to how local social order is constituted, maintained, and repaired in grocery shopping. As people shop, either by  trawling along aisles packed with thousands of products, or scrolling down screens or searching for particular brands amidst search results, lists may filter or reduce the excessive abundance, claims on attention, dazzle and distraction of commodities to the practical social order of domestic economy. The shopping list, whether written on the back of an envelope, saved as a list in an online grocery shopping system, or memorised, lies at the intersection of logistical flows, infrastructural orderings, and lively negotiations around actual and normative social orders.[^30.1]  Shopping lists  are intersectional ordering devices that encapsulate a universe of possible references, and a teeming multitude of propensities with an actual local order.[^1.456] In contrast to much e-commerce where each purchase concerns small numbers of items, the numerous items on a grocery shopping list suggest that online grocery shopping, and attempts to personalize it, will both provide many opportunities for recommendation (and hence conversion events) as well as many complexities in addressing normative and actual social orders. 
 
 [^30.1]: The shelves of large contemporary supermarket are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity (see [@Neilson_2012; @Tsing_2009]).  Groceries imply a planetary geography of agriculture, industry, transport, communication and financialisation animated by flows of labour and capital. Encounters between this hyper-complex commodity-geography and people, even in the familiar confines of a supermarket, are no simple matter, either for shoppers or for supermarket operators such as Tesco.
 
-Hand-written shopping lists have ongoing practical importance and mixed ordering practices (see the montage of handwritten shopping lists at [Grocery List](http://www.grocerylist.org)).  Online shopping lists, by contrast,  reside at the intersection of web and internet infrastructures, supply chain logistics, individualised practices and *habitus,* and increasingly, the predictive operations of  recommender systems. Whereas the aisles and shelves of a supermarket present a densely-woven mesh of objects competing for visual attention by offering distinctions of taste, thrift, expedience, novelty, indulgence, health, online shopping recommender systems generate lists that seek to align people to products that they otherwise might have little relation to (see [@Turow_2015] for an overview of the development of these systems). 
+Hand-written shopping lists have ongoing practical importance and mixed ordering practices (see the montage of handwritten shopping lists at [Grocery List](http://www.grocerylist.org)).  Online grocery shopping lists, by contrast,  reside at the intersection of web and internet infrastructures, supply chain logistics, individualised practices and *habitus,* and increasingly, the predictive operations of  recommender systems. Whereas the aisles and shelves of a supermarket present a densely-woven mesh of objects competing for visual attention by offering distinctions of taste, thrift, expedience, novelty, indulgence, health, online shopping recommender systems generate lists that seek to align people to products that they otherwise might have little relation to (see [@Turow_2015] for an overview of the development of these systems). 
 
-[^1.456]: If, as the social anthropologist Jack Goody argues, lists are historically primary as forms of writing in urbanizing cultures [@Goody_1986], and if list-making and its later variants (e.g. tables) precede discursive and narrative writing practices, then we might expect lists to function as powerful social ordering devices. More recent sociological work on lists (see [@deGoede_2016] for an overview) explore the social and political potency of lists as ordering devices. As literary scholars suggest (see [@Mainberger_2003]), even if lists have often been de-valued as literary forms, list-making commonly appears in literary form whenever writing seeks to address, name, group or evoke totality, profusion, excess or abundance. From both  anthropological and literary perspectives, shopping lists have excellent reasons to exist: they are deeply rooted in organisational life and infrastructures. Lists weave together people, infrastructures, things, and places.While lists intersect strongly with other meaning and sense-making practices in everyday life and popular culture, they can be refractory to discourse  and textual analysis methods built around models of language or speech, with its rules of syntax and grammar. On the one hand, lists are highly associative. They can be interpreted or decoded semiotically, although they exhibit  variations in textuality -- how they are written and read -- that thwart semiotic readings. On the other hand, as operational inscriptions, they can be treated ethnomethodologically, as the production of social order in a given setting. We might, in the light of their mutability, permeability and embedding in social order,  approach lists from various theoretical angles -- as asignifying semiotics as Maurizio Lazzarato calls it in his _Signs and Machines_ [@Lazzarato_2014] or as elements in 'a new order of spatio-temporal continuity for forms of economic, political and cultural life' as Celia Lury puts it in her account of topological turn [@Lury_2012].
+[^1.456]: If, as the social anthropologist Jack Goody argues, lists are historically primary as forms of writing in urbanizing cultures [@Goody_1986], and if list-making and its later variants (e.g. tables) precede discursive and narrative writing practices, then we might expect lists to function as powerful social ordering devices. More recent sociological work on lists (see [@deGoede_2016] for an overview) explore the social and political potency of lists as ordering devices. As literary scholars suggest (see [@Mainberger_2003]), even if lists have often been de-valued as literary forms, list-making commonly appears in literary form whenever writing seeks to address, name, group or evoke totality, profusion, excess or abundance. From both  anthropological and literary perspectives, shopping lists have excellent reasons to exist: they are deeply rooted in organisational life and infrastructures. Lists weave together people, infrastructures, things, and places. While lists intersect strongly with other meaning and sense-making practices in everyday life and popular culture, they can be refractory to discourse  and textual analysis methods built around models of language or speech, with its rules of syntax and grammar. On the one hand, lists are highly associative. They can be interpreted or decoded semiotically, although they exhibit  variations in textuality -- how they are written and read -- that thwart semiotic readings. On the other hand, as operational inscriptions, they can be treated ethnomethodologically, as the production of social order in a given setting. We might, in the light of their mutability, permeability and embedding in social order,  approach lists from various theoretical angles -- as asignifying semiotics as Maurizio Lazzarato calls it in his _Signs and Machines_ [@Lazzarato_2014] or as elements in 'a new order of spatio-temporal continuity for forms of economic, political and cultural life' as Celia Lury puts it in her account of topological turn [@Lury_2012].
 
 # D. Archaeology of recommendations:  from 1984  to 2007
 
 Although the changes Patel described are configured in Tesco-specific ways by DunnHumby, they are also broadly typical of a big data conversion event. Analytics service providers such as DunnHumby attempt to convert their customers by stories of conversion.[^6531] Patel's presentation was part of this effort. The main narrative of Patel's conversion narrative concerned Tesco's shift from a well-established loyalty-card based data-mining model developed in the 1990s to a predictive, probabilistic, 'personal relevance' model that would  append items to the shopping list in almost-realtime. Tesco is the largest supermarket chain in UK and a notable success story for DunnHumby.  Tesco's  customer loyalty and targeted marketing programme known as 'Tesco Clubcard' started in 1991. DunnHumby -- founded by operations researchers Edwina Dunn and Clive Humby -- is said to have convinced the CEO of Tesco sometime in 1991 that a loyalty card program could change the supermarket chain's relationship to its customers.[^65.2]  Clive Humby's academic publications are hard to track down.   An early paper given at the _Conference of Young Operational Researchers_ in Nottingham in 1984 suggests the direction that he, the company Dunn and Humby formed (DunnHumby) and later Tesco would take in constructing lists [@OKeefe_1984]. The abstract for Humby's presentation pre-figures an ongoing trajectory for data mining techniques aimed at eliciting detailed information on individual customer references. 
 
-[^6531] The web pages of the big data analytic companies providing products to various sectors of industry, government and media are stocked with images, graphics and statements centred on this conversion experience. [@Amoore_2015] analyses some of these. 
+[^6531]: The web pages of the big data analytic companies providing products to various sectors of industry, government and media are stocked with images, graphics and statements centred on this conversion experience. [@Amoore_2015] analyses some of these. 
 
 [^65.2]: Tesco changed its relations to customers in 1984 when they launched a very online grocery shopping system [@Winterman_2013]. 
 
