--- a/reconstruction.rmd
+++ b/reconstruction.rmd
@@ -175,7 +175,7 @@ I will not discuss all the dimensions of probabilisation implicit in the archite
 
 One fundamental difficulty is that the propensity of a customer to buy a recommended product changes. Popper's notion of probabilities as tendencies to realization inherent in a situation implies this.  In many cases, as Popper observes, 'the propensities cannot be measured because the relevant situation changes and cannot be repeated' [@Popper_1990, 17]. Measuring propensities and expressing these measurements as numbers between `0` and `1` becomes difficult because as a situation changes,  the propensities themselves change. No doubt the contingencies associated with grocery shopping are legion, perhaps more so than other kinds of products (books, music, films),  and any attempt to measure propensities associated with particular commodities  will encounter many changes.
 
-One way in which recommender systems might attempt to address the problem of the relational dynamics of propensities is by assuming that purchases will be repeated.   Patel mentioned that the new model uses '52 weeks of data' for each customer. In including this data in the model, the assumption is that the probability that a specific customer will buy a specific product will be increased by previous purchases of that product. The history of previous purchases constitutes forms of repetition that imply a stabilisation of propensities (e.g. a vegan customer will never have purchased chicken products, so the measured propensities for any of the 1000 or so chicken products sold be Tesco will remain close to `0`). But the changing situation of the customer only figures here in the accumulated year of purchase data, and that past purchases might precisely what does not need to recommended.     
+One way in which recommender systems might attempt to address the problem of the relational dynamics of propensities is by assuming that purchases will be repeated.   Patel mentioned that the new model uses '52 weeks of data' for each customer. In including this data in the model, the assumption is that the probability that a specific customer will buy a specific product will be increased by previous purchases of that product. The history of previous purchases constitutes forms of repetition that imply a stabilisation of propensities (e.g. a vegan customer will never have purchased chicken products, so the measured propensities for any of the 1000 or so chicken products sold be Tesco will remain close to `0`). But the changing situation of the customer only figures here in the accumulated year of purchase data.  Past purchases might precisely be  what does not need to be recommended.     
 
 When the logistic regression model includes the 52 weeks of previous purchases, the conditional probability calculation undertaken by the recommender system ramifies tremendously in several respects. Potentially, each of Tesco's 200,000 products becomes a variable in the classifier. We can imagine this as an arithmetic sum extending along a series of 200,000 terms.   Practically, most of the these variables will only slightly influence the sum of the probabilities for recommendations since most customers will have purchased only a fraction of the inventory. As Patel observed,  again assuming that this would be obvious to the audience of data scientists,  'we have lots of zeros'.   A matrix that records associations between individual people and products is bound to be mostly empty. Say Tesco has 1 million online customers. Each online  shopper has bought some selection of the 200,000 products. The customer-product data matrix will be `r format(1e6 * 2e5)` in size.  The product-customer matrix, the basic vector-space in which all recommender systems operate, remains very sparse and unpopulated. Given that any one customer is likely to only have bought 100 or so different products, the  matrix contain  `r format(100-(100/2e5)*100, 2)`% zero probabilities.
 
